2003-10-09  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Added authentification logging

	* src/ejabberd_listener.erl: Added logging of accepted connections

	* src/stringprep/stringprep_drv.c: Cleanup

	* src/jd2ejd.erl: Added support for iq:private importing

	* src/mod_configure.erl: Fixed user removal

	* src/mod_private.erl: Added remove_user/1

	* doc/guide.tex: Updated

	* src/mod_disco.erl: Added "extra_domains" option

2003-10-08  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Added support for "jid-malformed" error

	* src/stringprep/stringprep_drv.c: Bugfix

2003-10-07  Alexey Shchepin  <alexey@sevcom.net>

	* (all): Changed JID storage format, added support for stringprep

	* src/stringprep/: Added support for Unicode normalization form KC

2003-10-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/stringprep/: Added support for case convertion to multiple
	characters

	* src/cyrsasl_digest.erl: Temporary removed "auth-int" QOP

2003-09-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/stringprep/stringprep_drv.c: Added support for nameprep,
	nodeprep and resourceprep
	* src/stringprep/stringprep.erl: Likewise

	* src/ejabberd_sup.erl: Added loading of stringprep

	* src/ejabberd_sm.erl: Cleanup

2003-09-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/stringprep/: Support for stringprep (not completed yet)

2003-09-24  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Replaced io:format calls to ?DEBUG ones

2003-09-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Debug output switched off

	* src/mod_disco.erl: Server identity changed to "service/im"

	* src/mod_register.erl: Fixed jabber:iq:register handler
	registration, fixed registration removal processing

2003-09-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_disco.erl: Now only admin can discovery some nodes,
	fixed "node" attribute in replies

2003-09-10  Alexey Shchepin  <alexey@sevcom.net>
